--- a/ClientApp/src/app/server/server.component.css
+++ b/ClientApp/src/app/server/server.component.css
@@ -1,6 +1,6 @@
 .block-status {
-    width: 10vw;
-    height: 25vh;
+    width: 200px;
+    height: 200px;
     font-size: 1.3em;
     color: #000;
     text-align: center;
