--- a/ClientApp/src/app/sections/section-orders/section-orders.component.html
+++ b/ClientApp/src/app/sections/section-orders/section-orders.component.html
@@ -22,4 +22,9 @@
             </tr>
         </tbody>
     </table>
+    <app-pagination
+    (goPage)="goToPage($event)"
+    (goPrev)="goToPrevious()"
+    (goNext)="goToNext()">
+    </app-pagination>
 </div>
