Iplement pagination, bar chart component

--- a/ClientApp/src/app/sections/section-orders/section-orders.component.html
+++ b/ClientApp/src/app/sections/section-orders/section-orders.component.html
@@ -17,7 +17,7 @@
                 <td>{{ order.customer.name }}</td>
                 <td>{{ order.total }}</td>
                 <td>{{ order.placed | date: 'short' }}</td>
-                <td>{{ order.fulfilled | date: 'short' }}</td>
+                <td>{{ order.completed | date: 'short' }}</td>
                 <td>Status</td>
             </tr>
         </tbody>
@@ -25,6 +25,9 @@
     <app-pagination
     (goPage)="goToPage($event)"
     (goPrev)="goToPrevious()"
-    (goNext)="goToNext()">
+    (goNext)="goToNext()"
+    [page]="page"
+    [perPage]="limit"
+    [count]="total">
     </app-pagination>
 </div>
