Create line chart component

--- a/ClientApp/src/app/charts/line-chart/line-chart.component.html
+++ b/ClientApp/src/app/charts/line-chart/line-chart.component.html
@@ -1,5 +1,6 @@
 <div id="canvas-holder" class="chart">
     <canvas baseChart
+        *ngIf='lineChartData'
         [datasets]="lineChartData"
         [labels]="lineChartLabels"
         [options]="lineChartOptions"
